--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "notes-api",
-  "version": "2.2.0",
-  "description": "A Node.js starter for Serverless Framework with ES6 and TypeScript support",
-  "main": "handler.js",
+  "version": "0.0.1",
   "scripts": {
     "test": "serverless-bundle test",
-    "local": "serverless invoke local --function"
+    "local": "serverless invoke local -f",
+    "deploy": "serverless deploy",
+    "deploy-fn": "serverless deploy function -f"
   },
   "author": "",
   "license": "MIT",
