--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "test": "serverless-bundle test",
     "local": "serverless invoke local -f",
     "deploy": "serverless deploy",
-    "deploy-fn": "serverless deploy function -f"
+    "deploy-fn": "serverless deploy function -f",
+    "api-test": "aws-api-gateway-cli-test --options"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +15,7 @@
     "url": "https://github.com/AnomalyInnovations/serverless-nodejs-starter.git"
   },
   "devDependencies": {
+    "aws-api-gateway-cli-test": "^1.3.2",
     "aws-sdk": "*",
     "serverless": "*",
     "serverless-bundle": "3.2.0",
