--- a/serverless.yml
+++ b/serverless.yml
@@ -43,11 +43,13 @@ functions:
     # Defines an HTTP API endpoint that calls the main function in create.js
     # - path: url path is /notes
     # - method: POST request
+    # - authorizer: authenticate using the AWS IAM role
     handler: create.main
     events:
       - http:
           path: notes
           method: post
+          authorizer: aws_iam
 
   get:
     # Defines an HTTP API endpoint that calls the main function in get.js
@@ -58,6 +60,7 @@ functions:
       - http:
           path: notes/{id}
           method: get
+          authorizer: aws_iam
 
   list:
     # Defines an HTTP API endpoint that calls the main function in list.js
@@ -68,6 +71,7 @@ functions:
       - http:
           path: notes
           method: get
+          authorizer: aws_iam
 
   update:
     # Defines an HTTP API endpoint that calls the main function in update.js
@@ -78,6 +82,7 @@ functions:
       - http:
           path: notes/{id}
           method: put
+          authorizer: aws_iam
 
   delete:
     # Defines an HTTP API endpoint that calls the main function in delete.js
@@ -88,3 +93,4 @@ functions:
       - http:
           path: notes/{id}
           method: delete
+          authorizer: aws_iam
