--- a/serverless.yml
+++ b/serverless.yml
@@ -43,12 +43,12 @@ functions:
     # Defines an HTTP API endpoint that calls the main function in create.js
     # - path: url path is /notes
     # - method: POST request
-    # - authorizer: authenticate using the AWS IAM role
     handler: create.main
     events:
       - http:
           path: notes
           method: post
+          cors: true
           authorizer: aws_iam
 
   get:
@@ -60,6 +60,7 @@ functions:
       - http:
           path: notes/{id}
           method: get
+          cors: true
           authorizer: aws_iam
 
   list:
@@ -71,6 +72,7 @@ functions:
       - http:
           path: notes
           method: get
+          cors: true
           authorizer: aws_iam
 
   update:
@@ -82,6 +84,7 @@ functions:
       - http:
           path: notes/{id}
           method: put
+          cors: true
           authorizer: aws_iam
 
   delete:
@@ -93,4 +96,10 @@ functions:
       - http:
           path: notes/{id}
           method: delete
+          cors: true
           authorizer: aws_iam
+
+# Create our resources with separate CloudFormation templates
+resources:
+  # CORS headers for API Gateway Errors
+  - ${file(resources/api-gateway-errors.yml)}
